docker-elk/iptables
# Generated by iptables-save v1.6.0 on Fri Feb 15 14:01:08 2019
*nat
:PREROUTING ACCEPT [17:1020]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [20:1168]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.18.0.0/16 ! -o br-f4de0f00d447 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.2/32 -d 172.18.0.2/32 -p tcp -m tcp --dport 9300 -j MASQUERADE
-A POSTROUTING -s 172.18.0.2/32 -d 172.18.0.2/32 -p tcp -m tcp --dport 9200 -j MASQUERADE
-A POSTROUTING -s 172.18.0.3/32 -d 172.18.0.3/32 -p tcp -m tcp --dport 9600 -j MASQUERADE
-A POSTROUTING -s 172.18.0.3/32 -d 172.18.0.3/32 -p tcp -m tcp --dport 5000 -j MASQUERADE
-A POSTROUTING -s 172.18.0.4/32 -d 172.18.0.4/32 -p tcp -m tcp --dport 5601 -j MASQUERADE
-A DOCKER -i br-f4de0f00d447 -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i br-f4de0f00d447 -p tcp -m tcp --dport 9300 -j DNAT --to-destination 172.18.0.2:9300
-A DOCKER ! -i br-f4de0f00d447 -p tcp -m tcp --dport 9200 -j DNAT --to-destination 172.18.0.2:9200
-A DOCKER ! -i br-f4de0f00d447 -p tcp -m tcp --dport 9600 -j DNAT --to-destination 172.18.0.3:9600
-A DOCKER ! -i br-f4de0f00d447 -p tcp -m tcp --dport 5000 -j DNAT --to-destination 172.18.0.3:5000
-A DOCKER ! -i br-f4de0f00d447 -p tcp -m tcp --dport 5601 -j DNAT --to-destination 172.18.0.4:5601
COMMIT
# Completed on Fri Feb 15 14:01:08 2019
# Generated by iptables-save v1.6.0 on Fri Feb 15 14:01:08 2019
*filter
:INPUT ACCEPT [280:18688]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [154:21080]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o br-f4de0f00d447 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-f4de0f00d447 -j DOCKER
-A FORWARD -i br-f4de0f00d447 ! -o br-f4de0f00d447 -j ACCEPT
-A FORWARD -i br-f4de0f00d447 -o br-f4de0f00d447 -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-f4de0f00d447 -o br-f4de0f00d447 -p tcp -m tcp --dport 9300 -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-f4de0f00d447 -o br-f4de0f00d447 -p tcp -m tcp --dport 9200 -j ACCEPT
-A DOCKER -d 172.18.0.3/32 ! -i br-f4de0f00d447 -o br-f4de0f00d447 -p tcp -m tcp --dport 9600 -j ACCEPT
-A DOCKER -d 172.18.0.3/32 ! -i br-f4de0f00d447 -o br-f4de0f00d447 -p tcp -m tcp --dport 5000 -j ACCEPT
-A DOCKER -d 172.18.0.4/32 ! -i br-f4de0f00d447 -o br-f4de0f00d447 -p tcp -m tcp --dport 5601 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i br-f4de0f00d447 ! -o br-f4de0f00d447 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Fri Feb 15 14:01:08 2019
